src/App.css
body {
    min-width: 300px;
}

.box-shadow {
    box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.18) !important;
    -moz-box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.18) !important;
    -webkit-box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.18) !important;
}

.app-container {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    max-height: calc(100vh - 48px);
}

.tab-view {
    height: calc(100vh - 48px - 47px);
}

.mobile-nav {
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100vw;
}

